@@ -1,3 +1,7 @@
+  11 Jul 2019; Agostino Sarubbo <ago@gentoo.org> -queuemetrics-19.04.1.ebuild,
+  -queuemetrics-19.04.3.ebuild, queuemetrics-19.04.3-r1.ebuild:
+  app-metrics/queuemetrics: use https mirror, remove old
+
 *queuemetrics-19.04.3-r1 (03 Jul 2019)
 
   03 Jul 2019; Agostino Sarubbo <ago@gentoo.org> +files/server.xml,
